Langwitch/public/css/homecourse.css
.only-container {
    text-align: center;
}

.container-review {
    width: 263px;
    height: 319px;
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-shadow: 1.1px 1.1px 2.3px rgba(0, 0, 0, 0.048),
        3.6px 3.6px 7.8px rgba(0, 0, 0, 0.072),
        16px 16px 35px rgba(0, 0, 0, 0.12);
    margin-top: 38px;
}

.study-page {
    height: 785px;
}

.review-button-modifier {
    color: #060934;
    font-size: 24px;
    font-weight: 700;
}

.image-modifier-for-button {
    width: 243px;
    height: 211px;
}

.level-and-button {
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.jekin {
    text-decoration: none;
}

.jekball {
    color: #fff;
    font-size: 32px;
    font-weight: 800;
    background-image: url(../images/StandPlace.svg);
    background-position: center;
    height: 120px;
    width: 150px;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    filter: drop-shadow(3px 3px 15px rgba(0, 0, 0, 0.15));
    position: relative;
}

.jekball > img {
    position: absolute;
}

.jekball > img:nth-child(1) {
    bottom: 20px;
    left: 25px;
}

.jekball > img:nth-child(2) {
    bottom: 15px;
    left: 50%;
    transform: translateX(-50%);
}

.jekball > img:nth-child(3) {
    bottom: 20px;
    right: 25px;
}

.level-per-level {
    height: 100%;
    width: 80%;
    display: block;
    position: relative;
    overflow-y: scroll;
    margin-bottom: 100px;
}

.level-per-level::-webkit-scrollbar {
    display: none;
}

.blobby1 {
    position: absolute;
    top: 0;
    left: 0;
}

.blobby2 {
    position: absolute;
    top: 150px;
    left: 200px;
}

.blobby3 {
    position: absolute;
    top: 240px;
    left: 420px;
}

.blobby4 {
    position: absolute;
    top: 190px;
    left: 670px;
}

.blobby5 {
    position: absolute;
    top: 300px;
    left: 870px;
}

.blobby6 {
    position: absolute;
    top: 450px;
    left: 710px;
}

.blobby7 {
    position: absolute;
    top: 530px;
    left: 450px;
}

.blobby8 {
    position: absolute;
    top: 470px;
    left: 200px;
}

.blobby9 {
    position: absolute;
    top: 620px;
    left: 0;
}

.checkpoint01 {
    background-image: url(../images/Banner.svg);
    background-size: contain;
    height: 97px;
    width: 97px;
    position: absolute;
    bottom: -8px;
    left: 50%;
    transform: translateX(-50%);
}

.checkpoint02 {
    background-image: url(../images/Flag.svg);
    background-size: contain;
    height: 53px;
    width: 53px;
    position: absolute;
    top: 5px;
    left: calc(50% + 15px);
    transform: translateX(-50%);
}

.locked {
    filter: grayscale(1);
    pointer-events: none;
}

.locked > img {
    display: none;
}

